x86/PCI: trim _CRS windows when they conflict with previous reservations

Yanko's GA-MA78GM-S2H (BIOS F11) reports a host bridge window that overlaps
system memory:

    PCI window: [mem 0xcff00000-0x10ed0ffff]
    System RAM: [mem 0x100000000-0x22fffffff]

We can be pretty confident that the System RAM region is correct (if it
were wrong, we'd crash as soon as we tried to use any memory in that area),
so this patch tries to correct the PCI window by trimming it so it doesn't
conflict with any previous reservations.

http://bugzilla.kernel.org/show_bug.cgi?id=15480

Signed-off-by: Bjorn Helgaas <bjorn.helgaas@hp.com>
Reported-by: Yanko Kaneti <yaneti@declera.com>
Signed-off-by: Jesse Barnes <jbarnes@virtuousgeek.org>